2006-11-12  Jason Merrill  <jason@redhat.com>
	    Andrew Pinski <pinskia@physics.uc.edu>

	PR middle-end/28915
	* gimplify.c (gimplify_init_constructor): Don't reduce TREE_CONSTANT
	vector ctors.
	* tree-cfg.c (verify_expr): Don't look into TREE_CONSTANT
	vector ctors.
	* expmed.c (make_tree): Handle CONST, SYMBOL_REF.
	* tree.c (build_vector): Handle non-_CST elements.

2006-11-12  Daniel Berlin  <dberlin@dberlin.org>

	Fix PR tree-optimization/29587
	* tree-ssa-structalias.c (process_constraint): Don't
	mark address taken due only to escaped vars constraint.

2006-11-12  Jie Zhang  <jie.zhang@analog.com>

	Revert
	2006-11-11  Jie Zhang  <jie.zhang@analog.com>
	* config/bfin/bfin.h (TARGET_CPU_CPP_BUILTINS): Define __bfin__
	and __BFIN__.

	* config/bfin/bfin.h (TARGET_CPU_CPP_BUILTINS): Use builtin_define_std
	instead of builtin_define for bfin and BFIN.

2006-11-11  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin/bfin.h (TARGET_CPU_CPP_BUILTINS): Define __bfin__
	and __BFIN__.

2006-11-11  Richard Sandiford  <richard@codesourcery.com>

	PR middle-end/27528
	* stmt.c (expand_asm_operands): Use EXPAND_INITIALIZER if the
	constraints accept neither registers or memories.

2006-11-11  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin/bfin.h (FUNCTION_PROFILER): Don't use LABELNO.
	(NO_PROFILE_COUNTERS): Define as 1.

2006-11-09  Serge Belyshev  <belyshev@depni.sinp.msu.ru>

	PR middle-end/29726
	* fold-const.c (fold_binary) <EQ_EXPR>: Fix typo in variable name.

2006-11-09  Eric Christopher  <echristo@apple.com>

	PR bootstrap/26892
	PR bootstrap/27814
	PR other/28994
	* configure: Regenerate.
	* configure.ac: Match powerpc*-*-darwin* for powerpc darwin checks.
	* config.gcc (powerpc64-*-darwin*): New target.
	* config.host: Ditto.
	* config/rs6000/darwin64.h: New file.
	* config/rs6000/x-darwin64: Ditto.
	* config/rs6000/host-ppc64-darwin.c: Ditto.

2006-11-08  Brooks Moses  <brooks.moses@codesourcery.com>
