@@ -1,3 +1,11 @@
+2006-11-13  Richard Guenther  <rguenther@suse.de>
+
+	Backport form mainline:
+	2006-10-23  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/21032
+	* gcc.dg/pr21032.c: New testcase.
+
 2006-11-12 Paul Thomas <pault@gcc.gnu.org>
 
 	PR fortran/29699
