@@ -1,3 +1,12 @@
+2006-11-13  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline:
+	2006-10-23  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/21032
+	* convert.c (convert_to_real): Fold (float)-x to -(float)x
+	only if not flag_rounding_math.
+
 2006-11-12  Jason Merrill  <jason@redhat.com>
 	    Andrew Pinski <pinskia@physics.uc.edu>
 
